--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@
 }
 
 body{
-    background-color: rgb(219, 82, 82);
+    width: 100%;
+    height: 85vh;
+    background-image: url('img/fundo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
 }
 
 .painel{
@@ -19,33 +24,34 @@ body{
     border-radius: 20px;
     text-align: center;
     justify-content: center;
-    background-color: white;
-    margin-top: 100px;
+    background-color: rgba(255, 255, 255, 0.849);
+    margin-top: 200px;
     padding-top: 50px;
+    background-image: url('img/hollow-knight.png');
+    background-repeat: no-repeat;
+    background-position: 50% 80%;
 }
 
 h2{
     margin-top: 20px;
 }
 
-img{
-    width: 200px;
-}
-
 button{
     width: 100px;
     height: 50px;
-    background-color: rgb(221, 70, 70);
+    background-color: rgb(96, 208, 228);
     border: white;
-    border: 2px solid rgb(194, 179, 179);
     border-radius: 10px;
     cursor: pointer;
     color: white;
     margin-top: 20px;
+    font-size: 20px;
+    box-shadow: 1px 1px 1px 1px rgba(7, 7, 7, 0.26);
 }
 
-button:hover{
-    background-color: rgb(124, 25, 25);
+#sim:hover{
+    background-color: rgb(36, 128, 145);
+    transition: 0.5s;
 }
 
 #sim{
@@ -55,4 +61,44 @@ button:hover{
 #nao{
     position:absolute;
     margin-left: 50px;
+}
+
+.active{
+    display: none;
+}
+
+@media (max-width: 700px){
+    body{
+        height: 92vh;
+    }
+
+    .painel{
+        width: 250px;
+        height: 500px;
+        border-radius: 10px;
+        margin-top: 50px;
+        padding-top: 25px;
+    }
+    
+    h2{
+        margin-top: 15px;
+    }
+    
+    img{
+        width: 100px;
+    }
+    
+    button{
+        width: 60px;
+        height: 35px;
+        border-radius: 10px;
+        cursor: pointer;
+        margin-top: 15px;
+        font-size: 15px;
+        box-shadow: 1px 1px 1px 1px rgba(7, 7, 7, 0.26);
+    }
+    
+    #sim{
+        margin-left: -100px;
+    }
 }
